--- a/Draw/Controller/Room/RoomCell.xib
+++ b/Draw/Controller/Room/RoomCell.xib
@@ -45,7 +45,7 @@
 							<object class="IBUIImageView" id="904219116">
 								<reference key="NSNextResponder" ref="380575889"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{0, 8}, {61, 63}}</string>
+								<string key="NSFrame">{{7, 9}, {54, 56}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="427313591"/>
@@ -59,10 +59,10 @@
 							<object class="IBUIView" id="427313591">
 								<reference key="NSNextResponder" ref="380575889"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{3, 6}, {55, 57}}</string>
+								<string key="NSFrame">{{9, 9}, {50, 50}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="327737889"/>
+								<reference key="NSNextKeyView" ref="318460792"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
@@ -75,10 +75,10 @@
 							<object class="IBUILabel" id="64556621">
 								<reference key="NSNextResponder" ref="380575889"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{71, 28}, {150, 25}}</string>
+								<string key="NSFrame">{{71, 9}, {150, 25}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="21839038"/>
+								<reference key="NSNextKeyView" ref="665233394"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="785173849">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MCAwAA</bytes>
@@ -96,45 +96,21 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="973792842">
+								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">1</int>
 									<double key="pointSize">13</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="280798242">
+								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">13</double>
 									<int key="NSfFlags">16</int>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
-							<object class="IBUILabel" id="21839038">
-								<reference key="NSNextResponder" ref="380575889"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{72, 10}, {120, 21}}</string>
-								<reference key="NSSuperview" ref="380575889"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="665233394"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">甘米</string>
-								<object class="NSColor" key="IBUITextColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4zMDk4MDM5MjE2IDAuMjQzMTM3MjU0OSAwLjEyNTQ5MDE5NjEAA</bytes>
-								</object>
-								<nil key="IBUIHighlightedColor"/>
-								<int key="IBUIBaselineAdjustment">1</int>
-								<float key="IBUIMinimumFontSize">8</float>
-								<reference key="IBUIFontDescription" ref="973792842"/>
-								<reference key="IBUIFont" ref="280798242"/>
-								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-							</object>
 							<object class="IBUIButton" id="396181618">
 								<reference key="NSNextResponder" ref="380575889"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{225, 24}, {70, 26}}</string>
+								<string key="NSFrame">{{225, 9}, {70, 26}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -174,7 +150,7 @@
 							<object class="IBUILabel" id="665233394">
 								<reference key="NSNextResponder" ref="380575889"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{72, 49}, {213, 25}}</string>
+								<string key="NSFrame">{{72, 40}, {213, 25}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="396181618"/>
@@ -205,7 +181,7 @@
 							<object class="IBUIButton" id="318460792">
 								<reference key="NSNextResponder" ref="380575889"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{36, -1}, {40, 20}}</string>
+								<string key="NSFrame">{{36, 1}, {36, 18}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="64556621"/>
@@ -229,11 +205,11 @@
 								</object>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">2</int>
-									<double key="pointSize">12</double>
+									<double key="pointSize">11</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">12</double>
+									<double key="NSSize">11</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
@@ -243,7 +219,7 @@
 								<string key="NSFrame">{{3.5, 11.5}, {54, 56}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="318460792"/>
+								<reference key="NSNextKeyView" ref="904219116"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -272,7 +248,7 @@
 						<string key="NSFrameSize">{300, 74}</string>
 						<reference key="NSSuperview" ref="297589441"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="904219116"/>
+						<reference key="NSNextKeyView" ref="327737889"/>
 						<reference key="IBUIBackgroundColor" ref="785173849"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -299,14 +275,6 @@
 						<reference key="destination" ref="64556621"/>
 					</object>
 					<int key="connectionID">11</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">creatorLabel</string>
-						<reference key="source" ref="297589441"/>
-						<reference key="destination" ref="21839038"/>
-					</object>
-					<int key="connectionID">20</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -384,7 +352,6 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="396181618"/>
 							<reference ref="64556621"/>
-							<reference ref="21839038"/>
 							<reference ref="318460792"/>
 							<reference ref="665233394"/>
 							<reference ref="427313591"/>
@@ -396,11 +363,6 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
 						<reference key="object" ref="64556621"/>
-						<reference key="parent" ref="297589441"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">16</int>
-						<reference key="object" ref="21839038"/>
 						<reference key="parent" ref="297589441"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -441,7 +403,6 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="16.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="19.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
