--- a/Draw/Controller/Chat/ChatController~ipad.xib
+++ b/Draw/Controller/Chat/ChatController~ipad.xib
@@ -145,7 +145,6 @@
 								<string key="NSFrame">{{252, 434}, {228, 73}}</string>
 								<reference key="NSSuperview" ref="846355833"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -555,6 +554,14 @@
 					<int key="connectionID">116</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">chatTitleLabel</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="352374685"/>
+					</object>
+					<int key="connectionID">117</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickPayAttentionButton:</string>
 						<reference key="source" ref="777707669"/>
@@ -761,7 +768,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">116</int>
+			<int key="maxID">117</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -782,6 +789,7 @@
 						<string key="avatarView">AvatarView</string>
 						<string key="chatInfoView">UIView</string>
 						<string key="chatInfoViewBgImageView">UIImageView</string>
+						<string key="chatTitleLabel">UILabel</string>
 						<string key="cityLabel">UILabel</string>
 						<string key="closeButton">UIButton</string>
 						<string key="expressionScrollView">UIScrollView</string>
@@ -813,6 +821,10 @@
 						<object class="IBToOneOutletInfo" key="chatInfoViewBgImageView">
 							<string key="name">chatInfoViewBgImageView</string>
 							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="chatTitleLabel">
+							<string key="name">chatTitleLabel</string>
+							<string key="candidateClassName">UILabel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="cityLabel">
 							<string key="name">cityLabel</string>
